# pmg-dolfinx

./: .clang-format  .gitignore  ARCHER2.md  CSD3.md  LICENSE  LUMI.md  README.md  hypre-cuda.yaml  hypre-rocm-lumi.yaml  hypre-rocm.yaml  interactive_run.sh
examples/amg/: CMakeLists.txt  lumi_g.sh  main.cpp  poisson.py  setup_lumi.sh
examples/cg/: CMakeLists.txt  lumi_g.sh  main.cpp  poisson.py  rocprof_wrapper.sh  setup.sh  submit.sh  submit_rocprof.sh
examples/mat_free/: CMakeLists.txt  main.cpp  poisson.py
examples/pmg/: CMakeLists.txt  lumi_g.sh  main.cpp  mesh.cpp  mesh.hpp  poisson.py  submit.sh
examples/vector-update/: CMakeLists.txt  lumi_g.sh  main.cpp  submit.sh
hackathon/: CMakeLists.txt  main.cpp  poisson.py
hackathon/python_tests/: interpolation_matrix.py
python_tests/: cg.py  chebyshev.py  eigenvalue_computation.py  interpolation_matrix.py  pmg.py  tqli.py
src/: allocator.hpp  amd_gpu.hpp  amg.hpp  cg.hpp  chebyshev.hpp  coarse_solver.hpp  csr.hpp  ghost_layer.hpp  interpolate.hpp  laplacian.hpp  matrix-free.hpp  mesh.hpp  nvidia_gpu.hpp  operators.hpp  pmg.hpp  precompute.hpp  rocalution.hpp  small-csr.hpp  util.hpp  vector.hpp
test/: CMakeLists.txt  test_csr.cpp
